Bug #10590 Function 'TIME_FORMAT(time,format)' does not display correct result.
Submitted: 12 May 2005 13:56 Modified: 23 Jun 2005 14:56
Reporter: Disha
Status: Closed
Category:Server Severity:S2 (Serious)
Version:5.0.5-beta pre-release OS:Microsoft Windows (Windows Server 2003)
Assigned to: Jim Winstead Target Version:

[12 May 2005 13:56] Disha
Description:
Function 'TIME_FORMAT(time,format)' does not display correct result.

How to repeat:
1. delimiter //
2. create database test//
3. use test
4. set @@sql_mode='traditional'//
5. select time_format('100:00:00', '%H %k %h %I %l')//
6. Execution of step (5) displays the result as,
	+--------------------------------------------+
	| time_format('100:00:00', '%H %k %h %I %l') |
	+--------------------------------------------+
	| 100 100 100 100 100                        |
	+--------------------------------------------+

Expected Result: The function 'TIME_FORMAT(time,format)' should return 
       appropriate result.

Actual Result  : The execution displays the result as,

	+--------------------------------------------+
	| time_format('100:00:00', '%H %k %h %I %l') |
	+--------------------------------------------+
	| 100 100 100 100 100                        |
	+--------------------------------------------+
[12 May 2005 14:03] Miguel Solorzano
Verified on Linux.
[28 May 2005 1:41] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/internals/25368
[4 Jun 2005 2:48] Jim Winstead
Pushed for 5.0.7.
[23 Jun 2005 14:56] Jon Stephens
Thank you for your bug report. This issue has already been fixed
in the latest released version of that product, which you can download at 
http://www.mysql.com/downloads/

Additional info:

Documented bugfix in 5.0.7 changelog; marked as Closed In Release.
[3 Jan 2006 6:30] Marcus Vinícius de Lima
Hello,
I've been lokking for a solution about time formats larger than 0to23.
When I use the comand timediff(lasttime, firsttime) i get the real time value for example
(100:00:00) but when i use the comand SUM() the format get error again.

Someone can help me?
Thanks.